feat: implement secure CORS configuration and JWT handling for production environment